Fix shop image overflow

--- a/app/assets/stylesheets/components/_shop-item-card.scss
+++ b/app/assets/stylesheets/components/_shop-item-card.scss
@@ -26,8 +26,16 @@
 
   &__image {
     width: 100%;
-    position: relative;
-    z-index: 1;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      width: 100%;
+      position: relative;
+      z-index: 1;
+    }
   }
 
   &__content {
